[fix] Update tmux.conf to kill window or pane without confirmation

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,9 +9,9 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-# close window and pane without confirmation
-bind & kill-window
-bind x kill-pane
+# Kill windows or pane without confirmation
+bind-key & kill-window
+bind-key x kill-pane
 
 # # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
