--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,9 @@ unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
+# split panes using | and - in current directory
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
