--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # split panes using | and - in current directory
 bind | split-window -h -c "#{pane_current_path}"
@@ -17,7 +17,7 @@ bind-key x kill-pane
 bind r source-file ~/.tmux.conf
 
 # Enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse on
+set -g mouse off   # Mouse disabled, adjust pane with <prefix> alt+Up/Down/Left/Right
 
 # don't rename windows automatically
 set-option -g allow-rename off
