Enable resizing of pane using hjkl

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,5 +48,14 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
-bind-key -T coky-mode-vi 'C-Space' select-pane -t:.+
+bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
+# Resize pane using hjkl
+bind-key -r -T prefix       M-k         resize-pane -U 5
+bind-key -r -T prefix       M-j         resize-pane -D 5
+bind-key -r -T prefix       M-h         resize-pane -L 5
+bind-key -r -T prefix       M-l         resize-pane -R 5
+bind-key -r -T prefix       C-k         resize-pane -U
+bind-key -r -T prefix       C-j         resize-pane -D
+bind-key -r -T prefix       C-h         resize-pane -L
+bind-key -r -T prefix       C-l         resize-pane -R
