Install TPM with custom tmux bar theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,3 +59,63 @@ bind-key -r -T prefix       C-k         resize-pane -U
 bind-key -r -T prefix       C-j         resize-pane -D
 bind-key -r -T prefix       C-h         resize-pane -L
 bind-key -r -T prefix       C-l         resize-pane -R
+
+# Plugins
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# tmux2k status bar
+# https://github.com/2KAbhishek/tmux2k
+set -g @plugin '2kabhishek/tmux2k'
+set -g @tmux2k-theme 'catppuccin'
+
+# to show icons only
+set -g @tmux2k-icons-only true
+
+# to customize duo bg and fg
+set -g @tmux2k-duo-fg "#1688f0" # this will get you duo blue shown above
+set -g @tmux2k-duo-bg "#000000" # this will set the bg for duo theme
+
+# to set powerline symbols
+set -g @tmux2k-right-sep  # alternate right status bar sep
+set -g @tmux2k-win-right-sep  # alternate window right sep
+
+# to not show powerline
+set -g @tmux2k-show-powerline false
+
+# set start icon, accpets: `session`, 'window`, or any string
+set -g @tmux2k-start-icon ""
+
+# set the left and right plugin sections
+set -g @tmux2k-left-plugins "cpu ram bandwidth"
+set -g @tmux2k-right-plugins "battery weather time"
+
+# to enable compact window list size
+set -g @tmux2k-compact-windows true
+
+# change refresh rate
+set -g @tmux2k-refresh-rate 5
+
+# weather scale
+set -g @tmux2k-show-fahrenheit false
+
+# 24 hour time
+set -g @tmux2k-military-time true
+
+# network interface to watch
+set -g @tmux2k-network-name "wlp3s0"
+
+# Set weather retrieval to Singapore
+set -g @tmux2k-fixed-location "Singapore"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+run '~/.tmux/plugins/tpm/tpm'
