Reenable mouse control on tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ bind-key x kill-pane
 bind r source-file ~/.tmux.conf
 
 # Enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse off   # Mouse disabled, adjust pane with <prefix> alt+Up/Down/Left/Right
+set -g mouse on   # Mouse disabled, adjust pane with <prefix> alt+Up/Down/Left/Right
 
 # don't rename windows automatically
 set-option -g allow-rename off
