--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,11 @@ set -g mouse on   # Mouse disabled, adjust pane with <prefix> alt+Up/Down/Left/R
 # don't rename windows automatically
 set-option -g allow-rename off
 
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 
